added toggle to ui and editor

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div id="sidebar"><div id="outliner"></div><div id="controls"></div></div>
-        <div id="sidebarResize"></div>
+        <div class="editor" id="sidebar"><div id="controls"></div></div>
+        <div class="editor" id="sidebarResize"></div>
         <canvas width="512" height="512" id="viewport"></canvas>
-        <div id="consoleResize"></div>
-        <div id="console"></div>
+        <div class="editor"id="consoleResize"></div>
+        <div class="editor"id="console"></div>
         <div id="ui"></div>
         <script src="js/editor/console.js"></script>
         <script src="js/editor/rendersettings.js"></script>
